force-app/main/default/objects/CFaaS_File__c/CFaaS_File__c.object-meta.xml
<CustomObject>
    <description>This will hold the file details/information that will be retrieved from CFaaS.</description>
    <label>CFaaS File</label>
    <nameField>
        <displayFormat>CFaaS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFaaS Files</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>