force-app/main/default/objects/CFaaS_File__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_CFaaS</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person/Commercial account, this file is linked to</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CFaaS Files</relationshipLabel>
    <relationshipName>CFaaS_Files</relationshipName>
    <type>Lookup</type>
</CustomField>