force-app/main/default/objects/CFaaS_File__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_CFaaS</complianceGroup>
    <description>Created Date of the document in CFaaS</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>