force-app/main/default/objects/CFaaS_File__c/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_CFaaS</complianceGroup>
    <description>Unique CFaaS Document Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>