force-app/main/default/objects/CFaaS_File__c/fields/File_Description__c.field-meta.xml
<CustomField>
    <fullName>File_Description__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_CFaaS</complianceGroup>
    <description>File Description</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>File Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>