force-app/main/default/objects/CFaaS_File__c/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_CFaaS</complianceGroup>
    <description>File Extension</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>File Extension</label>
    <length>50</length>
    <type>Text</type>
</CustomField>