force-app/main/default/objects/CFaaS_File__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_CFaaS</complianceGroup>
    <description>Filename</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>