force-app/main/default/objects/CFaaS_File__c/fields/File_Source_System__c.field-meta.xml
<CustomField>
    <fullName>File_Source_System__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_CFaaS</complianceGroup>
    <description>System Name who  uploaded/updated the file</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>File Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>