force-app/main/default/objects/CFaaS_File__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_CFaaS</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Financial account, this file is linked to</description>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>CFaaS Files</relationshipLabel>
    <relationshipName>CFaaS_Files</relationshipName>
    <type>Lookup</type>
</CustomField>