force-app/main/default/objects/CFaaS_File__c/fields/Integrity_Classification__c.field-meta.xml
<CustomField>
    <fullName>Integrity_Classification__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_CFaaS</complianceGroup>
    <description>File Classification in CFaaS</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Integrity Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>