force-app/main/default/objects/CFaaS_File__c/fields/Privacy_Classification__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Classification__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_CFaaS</complianceGroup>
    <description>File Classification in CFaaS</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Privacy Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>