force-app/main/default/objects/CFaaS_File__c/fields/Residential_Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>Residential_Loan_Id__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_CFaaS</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Residential loan this file is related to</description>
    <label>Residential Loan Id</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>CFaaS Files</relationshipLabel>
    <relationshipName>CFaaS_Files</relationshipName>
    <type>Lookup</type>
</CustomField>